fix jumpotron

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .jumbotron-modify {
-  height: 165px;
   margin-bottom: 0;
   padding-top: 10px;
   background-color: #FF5F5F;
